src/App.css
html *:not[.health-bar] {
  margin:0!important;
  width: 0!important;
}

html *{
  overflow: hidden!important;
  box-sizing: border-box;
}

body {  
  overflow-y: hidden;
  overflow-x: hidden;
  padding: 1vh 1vw;
  background-color: #282c34;
  -webkit-touch-callout: none !important;
  -webkit-user-select: none;  
  width: 100vw!important;
}

#root {
  width: 100%!important;
}



.App {
  display: flex;
  justify-content: center;
  text-align: center;
  background-color: #282c34;
  min-height:73vh;
  width: 100%!important;
}

.button-left {
  position: fixed;
  left: 2vw;
  background-image: url('resources/images/arrow-left.png');
}

.button-right {
  background-image: url('resources/images/arrow-right.png');
  position: fixed;
  right: 2vw;
}

.button-left, .button-right {
  z-index: 2;
  height: 73vh;
  width: 9vw!important;
  background-color: #777;
  background-size: contain;
  background-repeat: no-repeat; 
  background-position: center; 
}

.field {
  width: 80vw!important;
  height: 73vh;
  z-index: 1;
  position: fixed;
  background-image: url('resources/images/background.jpg');
  background-size: cover;
}

.player {
  height: calc(var(--vh, 1vh) * 12);
  width: calc(var(--vh, 1vh) * 12)!important;
  position: absolute;
  background-image: url('resources/images/standing.gif'); 
  background-size: cover;
  margin:0;
  padding: 0;
  z-index: 1;
  margin-top: -.5vh;
}

.left {
 transform: rotateY(180deg);
}

.right {
 transform: rotateY(0deg);
}

.run {
 background-image: url('resources/images/run.gif'); 
}

.jump {
 background-image: url('resources/images/jump.gif'); 
}

.throw {
 background-image: url('resources/images/throw.gif'); 
}

.falling.right {
  transition: transform .1s;
  transform: rotateZ(-90deg) translateX(-50%);
}

.falling.left {
  transition: transform .1s;
  transform: rotateZ(90deg) translateX(50%);
}

.overlay {
  position: absolute;
  top:0;
  left:0;
  width: 100vw!important;
  height: 100vh;
  color: white;
  background-color: #282c34;
  z-index: 6;
}

.snowman, .gumdrop, .ginger, .badKid, .black-ice, .fairy, .elf, .toy  {
  margin:0;
  position: absolute;
  width: 6vw!important;
  height: 6vw;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  z-index: 1
}

.gumdrop {
  z-index: 1;
}

.black-ice {
  background-color: black;
  opacity: .5;
  border-radius: 15%;
  height: 1vw;
  z-index: 2
}

.snowball {
  width: 1vw;
  height: 1vw;
  background-color: white;
  position: absolute;
  transform: translateY(6vh);
  border-radius: 50%;
  border: 1px solid gray;
}

.snowman {
  background-image: url('resources/images/snowman.gif');
}

.gumdrop {
  background-image: url('resources/images/gumdrop.png');
}

.ginger {
  background-image: url('resources/images/ginger.gif');
}

.fairy {
  background-image: url('resources/images/fairy.gif');
  transform: translateY(-5vh)!important;
}

.elf {
  background-image: url('resources/images/elf.gif');
}

.toy {
  background-image: url('resources/images/toy.gif');
}

.badKid {
  background-image: url('resources/images/badKid-left.gif');
  transform: rotateY(0deg);
}

.badKid.right {
  background-image: url('resources/images/badKid-right.gif');
}

.health-bar {
  position: absolute;
  z-index: 2;
  top: 2vh;
  left: 2vw;
  height: 2vh;
  width: var(--life, 20vh)!important;
  background-color: red;
}

.action-box {
  border: 1px solid black;
  height: 7vw;
  width: 7vw!important;
  position: absolute;
  top: 6vh;
  left: 2vw;
  border-radius: 10%;
  z-index: 2;
  background-size: 80%;
  background-position: center;
  background-repeat: no-repeat;
  background-color: white;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding: .5rem;
  font-weight: bold;
  font-family: sans-serif;
  color: firebrick;  
}

.screen {
  width: 90%!important;
  height: 73vh;
  z-index: 2;
  position: fixed;
  left:5vw; 
  background-size: contain;
  background-color: transparent;  
  background-image: url('resources/images/background.png');
}

.bg {
  background-image: url('resources/images/bg.png');
}

.blinder {
  box-sizing: border-box;
  margin: 0!important;
  position: fixed;
  top:0;
  left: 0;
  border-left: 2vw solid #282c34;
  border-right: 2vw solid #282c34;
  width: 100vw!important;
  height: 100%;
  z-index: 3;
  pointer-events: none;
}

.menu {
  height: 20vh;
  width: 96vw;
  background-color: #555;
  position: fixed;
  z-index: 3;
  top: 74vh;
  left: 2vw;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: nowrap;
  margin: auto;
}

.item {
  height: 7vw;
  width: 7vw!important;
  border-radius: 10%;
  background-size: cover;
}

.fieldItem {
  height: 3vw;
  width: 3vw!important;
  background-size: cover;  
  position: absolute;
}

.active {
  height: 3vw;
  width: 3vw!important;
  background-size: cover;
  position: absolute;
  z-index: 3;
}

.candy-cane {
  background-image: url('resources/images/candy-cane.jpg');
  transform: translateX(1.5vw);
}

.cookies {
  background-image: url('resources/images/cookies.png');
  transform: translateX(1.5vw);
}

.gift {
  background-image: url('resources/images/gift.png');
  transform: translateX(1.5vw);
}  

.coke {
  background-image: url('resources/images/coke.png');
  transform: translateX(1.5vw);
}  

.salt {
  background-image: url('resources/images/salt.png');
  transform: translateX(1.5vw);

}

.nuts {
  background-image: url('resources/images/nuts.png');
  transform: translateX(1.5vw);  
}

.letter {
  background-image: url('resources/images/letter.png'); 
  height: 2vw;
  width: 2vw!important;
  transform: translateY(1vw) translateX(1.5vw);
  animation: letter 1s linear infinite;
}

.coal-bucket {
  background-image: url('resources/images/coal-bucket.png');
  transform: translateX(1.5vw);

}

.candy-cane-missile {
  animation: rotateZflash 1s;
  background-image: url('resources/images/candy-cane.png'); 
  border-radius: 50%;
}

.gift-missile {
 background-image: url('resources/images/gift.gif');   
}

.salt-missile {
  animation: rotateZ 1s;
  height: 2vw;
  width: 2vw!important;
  background-image: url('resources/images/salt.png');  
}

.coke-missile {
  animation: rotateZ 1s;
  height: 3vw;
  width: 3vw!important;
  background-image: url('resources/images/coke.png');
}

.coal-missile {
  animation: rotateZ 1s;
  height: 1vw;
  width: 1vw!important;
  background-image: url('resources/images/coal.png');
}

.nut-missile {
  animation: rotateZ 1s;
  height: 1vw;
  width: 1vw!important;
  background-image: url('resources/images/nut.png');
}


.hit, .snowhit {
  background-color: rgba(128,0,0,.3);
  width: 100%;
  height: 100%;
  border-radius: 40% 50%;
  animation: flash 100ms infinite;
}

.platform {
  height: 1vw;
  width: 1vw!important;
  position: fixed;
  background-color: rgba(0,128,255,.4);
  box-shadow:0vw 0vw .2vw .2vw rgba(255,255,255,0.8) inset;
  transform: translateX(13.25vw);
  z-index: 0;
}

.wall {
  height: 1vh;
  width: 1vw!important;
  position: fixed;
  background-color: rgba(0,128,255,.4);
  box-shadow:0vw 0vw .2vh .2vh rgba(255,255,255,0.8) inset;
  z-index: 1;
  transform: translateX(13vw) ;
}

.mailbox {
  position: absolute;
  top: 5vh;
  left: 10vw;
  width: 6vw;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: nowrap;
  z-index: 2;
}

.mailbox img {
  padding: 1vw;
  width: 100%; 
  height: auto;
}



.mailbox span {
  white-space: nowrap!important;
  color: green;
  overflow: visible!important;
}

.instruction-modal {
  letter-spacing: .2rem;
  z-index: 5;
  background-color: red;
  background-image: url('resources/images/wreath.png');
  background-position: center;
  background-size: 100vw 100vh;
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 2.5rem;
  font-family: sans-serif;
  flex-wrap: nowrap;
  font-size: 2.2rem;
}

.instruction-modal button {
  background-color: green;
  color: white;
  border: none;
  font-size: 2.2rem;
  padding: .5rem 1.5rem;
  font-family: Girassol;
}

.modal-text {
  text-align: center;
  width: 50%;
  line-height: 1.5;
}

.screen-demo {
  background-image: url('resources/images/instructions.png');
}

.demo-1 {
  background-image: url('resources/images/instructions1.png');
}

.demo-2 {
  background-image: url('resources/images/instructions2.png');
}

.demo-3 {
  background-image: url('resources/images/instructions3.png');
}   

.screen-demo .modal-text {
  background-color: black;
  padding: .5rem;
}

.modal-text {
  font-family: Girassol;
}

.sleigh {
  position: fixed;
  top:58vh;
  height: 6vw;
  width: 26vw!important;
  background-image: url('resources/images/sleigh.png');
  background-size: 100% 100%;
}

.sleigh-final {
  top: 8vh;
  position: absolute;
  height: 6vw;
  animation: sleigh 20s linear infinite;
}

.final {
  background-image: url('resources/images/background.jpg');
  background-size: cover;
}

.final .modal-text {
  background-color: black;
}

.button-container {
  width: 50%;
  display: flex;
  justify-content: space-around;
}
.no {
  background-color: firebrick!important;
}

@keyframes rotateZ {
  0% {transform: rotateZ(0deg);}
  25% {transform: rotateZ(90deg);}
  50% {transform: rotateZ(180deg);}
  75% {transform: rotateZ(270deg);}
}


@keyframes rotateZflash {
  0% {transform: rotateZ(0deg);background-color: transparent;}
  25% {transform: rotateZ(90deg);background-color: rgba(255,255,255,.7);}
  50% {transform: rotateZ(180deg);background-color: transparent;}
  75% {transform: rotateZ(270deg);background-color: rgba(255,255,255,.7);}
}

@keyframes letter {
  from {box-shadow: 0 0 1vw 1vw  white;}
  to {box-shadow: none;}
}


@keyframes flash {
  from {opacity: 1;}
  to { opacity: 0;}
}


@keyframes sleigh {
  0% {left:-28vw; transform: rotateY(0deg);}
  25% {left: 100vw; transform: rotateY(0deg);}
  50% {left: 100vw; transform: rotateY(180deg);}
  75% {left: -28vw; transform: rotateY(180deg);}
  100% {left: -28vw; transform: rotateY(0deg);}
}

@media only screen and (max-width: 1080px) {


.menu {
  width: 98vw;
}

.instruction-modal *{
  font-size: 1.2rem;
  }

}

